eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
spec:
    controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: timbrame-rest-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    ingressClassName: nginx
    rules:
        - host: 'api.gabrielspranger.com'
          http:
              paths:
                  - pathType: Prefix
                    path: '/'
                    backend:
                        service:
                            name: timbrame-rest-service
                            port:
                                number: 80
    tls:
        - hosts:
              - 'api.gabrielspranger.com'
          secretName: timbrame-rest-cert
